# JOBSEARCH

./: .env.example  .gitignore  README.md  project_context.md  pyproject.toml  run_dashboard.sh
.claude/: launch.json
config/: settings.py  user_profile.yaml  user_profile.yaml.example
scripts/: setup_cron.sh  start_dashboard.sh  test_run.sh
src/job_search/: main.py
src/job_search/acquisition/: base.py  browser_utils.py  indeed.py  naukri.py  remoteok.py  rss_feeds.py
src/job_search/models/: job.py  match.py  profile.py
src/job_search/output/: apply.py  dashboard.py  email_digest.py
src/job_search/output/templates/: dashboard.html  digest.html
src/job_search/processing/: cover_letter.py  deduplication.py  matcher.py
src/job_search/storage/: database.py  models.py  repository.py
